chore: Updated linting and formatting configurations
- Updated ESLint and Prettier scripts to support latest TypeScript and React hooks best practices.
- Installed new ESLint plugins and configurations for TypeScript, import handling, and JSX accessibility.
- Enhanced linting and formatting automation with new script entries to ensure code consistency and quality.
- Integrated Husky for pre-commit hooks to enforce code quality checks before commits.
- Updated dependencies to the latest versions to take advantage of improved features and security patches.

This commit ensures the project adheres to the latest standards in code quality and maintainability, leveraging improved tooling and configurations.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
     "start:dev": "yarn watch:css & ionic capacitor run ios -l --external",
     "test.e2e": "cypress run",
     "test.unit": "vitest",
-    "lint": "eslint"
+    "lint": "eslint . --ext .ts,.tsx",
+    "lint:fix": "eslint . --ext .ts,.tsx --fix",
+    "prettier": "prettier --check .",
+    "prettier:fix": "prettier --write .",
+    "fix": "yarn prettier:fix && yarn lint:fix",
+    "test-all": "yarn run prettier && yarn run lint && yarn run build",
+    "prepare": "husky"
   },
   "dependencies": {
     "@capacitor/android": "6.1.1",
@@ -26,6 +32,10 @@
     "@ionic/react-router": "^8.0.0",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "@typescript-eslint/eslint-plugin": "^8.1.0",
+    "@typescript-eslint/parser": "^8.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "ionicons": "^7.0.0",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
@@ -43,16 +53,22 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-legacy": "^5.0.0",
     "@vitejs/plugin-react": "^4.0.1",
     "autoprefixer": "^10.4.19",
     "cypress": "^13.5.0",
-    "eslint": "^8.35.0",
-    "eslint-plugin-react": "^7.32.2",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jsx-a11y": "^6.9.0",
+    "eslint-plugin-react": "^7.35.0",
+    "husky": "^9.1.4",
     "jsdom": "^22.1.0",
     "postcss-cli": "^11.0.0",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.6",
     "tailwindcss": "^3.4.6",
     "terser": "^5.4.0",
     "typescript": "^5.1.6",
